--- a/ImageViewer_ScriptDriven/ImageViewer.vcproj
+++ b/ImageViewer_ScriptDriven/ImageViewer.vcproj
@@ -1,126 +1,189 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="9.00"
 	Name="ImageViewer_ScriptDriven"
 	ProjectGUID="{1496AC3F-3EEF-4F73-AB59-27014153F347}"
-	Keyword="MFCProj">
+	Keyword="MFCProj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="2"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="false"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_MIDL_USE_GUIDDEF_"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				TreatWChar_tAsBuiltInType="TRUE"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="3"
+				TreatWChar_tAsBuiltInType="true"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				OutputFile="$(ProjectName)_d.exe"
-				LinkIncremental="2"
-				GenerateDebugInformation="TRUE"
-				SubSystem="2"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="FALSE"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
 				Culture="1033"
-				AdditionalIncludeDirectories="$(IntDir)"/>
+				AdditionalIncludeDirectories="$(IntDir)"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				OutputFile="$(ProjectName)_d.exe"
+				LinkIncremental="2"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="2"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="false"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_MIDL_USE_GUIDDEF_"
-				MinimalRebuild="FALSE"
+				MinimalRebuild="false"
 				RuntimeLibrary="2"
-				TreatWChar_tAsBuiltInType="TRUE"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="3"
+				TreatWChar_tAsBuiltInType="true"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				OutputFile="$(ProjectName).exe"
-				LinkIncremental="1"
-				GenerateDebugInformation="TRUE"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="FALSE"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
 				Culture="1033"
-				AdditionalIncludeDirectories="$(IntDir)"/>
+				AdditionalIncludeDirectories="$(IntDir)"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				OutputFile="$(ProjectName).exe"
+				LinkIncremental="1"
+				GenerateDebugInformation="true"
+				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -129,246 +192,318 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath=".\ImageViewer.cpp">
+				RelativePath=".\ImageViewer.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageViewerDlg.cpp">
+				RelativePath=".\ImageViewerDlg.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx.cpp">
+				RelativePath=".\stdafx.cpp"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath=".\ImageViewer.h">
+				RelativePath=".\ImageViewer.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageViewerDlg.h">
+				RelativePath=".\ImageViewerDlg.h"
+				>
 			</File>
 			<File
-				RelativePath=".\Resource.h">
+				RelativePath=".\Resource.h"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx.h">
+				RelativePath=".\stdafx.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
 			<File
-				RelativePath=".\res\ImageViewer.ico">
+				RelativePath=".\res\ImageViewer.ico"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageViewer.rc">
+				RelativePath=".\ImageViewer.rc"
+				>
 			</File>
 			<File
-				RelativePath=".\res\ImageViewer.rc2">
+				RelativePath=".\res\ImageViewer.rc2"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Common"
-			Filter="">
+			>
 			<File
-				RelativePath=".\CHQException.h">
+				RelativePath=".\CHQException.h"
+				>
 			</File>
 			<File
-				RelativePath=".\global_defs.h">
+				RelativePath=".\global_defs.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageProcessor.cpp">
+				RelativePath=".\ImageProcessor.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageProcessor.h">
+				RelativePath=".\ImageProcessor.h"
+				>
 			</File>
 			<File
-				RelativePath=".\MiscUtils.cpp">
+				RelativePath=".\MiscUtils.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\MiscUtils.h">
+				RelativePath=".\MiscUtils.h"
+				>
 			</File>
 			<File
-				RelativePath=".\safe_defs.h">
+				RelativePath=".\safe_defs.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Skinned UI"
-			Filter="">
+			>
 			<File
-				RelativePath=".\CEasyHyperlink.cpp">
+				RelativePath=".\CEasyHyperlink.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CEasyHyperlink.h">
+				RelativePath=".\CEasyHyperlink.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CScriptButton.cpp">
+				RelativePath=".\CScriptButton.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CScriptButton.h">
+				RelativePath=".\CScriptButton.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinButton.cpp">
+				RelativePath=".\CSkinButton.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinButton.h">
+				RelativePath=".\CSkinButton.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinDialog.cpp">
+				RelativePath=".\CSkinDialog.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinDialog.h">
+				RelativePath=".\CSkinDialog.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinObject.cpp">
+				RelativePath=".\CSkinObject.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CSkinObject.h">
+				RelativePath=".\CSkinObject.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CUISkinXmlParser.cpp">
+				RelativePath=".\CUISkinXmlParser.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CUISkinXmlParser.h">
+				RelativePath=".\CUISkinXmlParser.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CXmlWrapper.cpp">
+				RelativePath=".\CXmlWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CXmlWrapper.h">
+				RelativePath=".\CXmlWrapper.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="DOM 2 Events"
-			Filter="">
+			>
 			<File
-				RelativePath=".\DOM2_defs.h">
+				RelativePath=".\DOM2_defs.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2Event.cpp">
+				RelativePath=".\DOM2Event.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2Event.h">
+				RelativePath=".\DOM2Event.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2EventListener.cpp">
+				RelativePath=".\DOM2EventListener.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2EventListener.h">
+				RelativePath=".\DOM2EventListener.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2EventTarget.cpp">
+				RelativePath=".\DOM2EventTarget.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\DOM2EventTarget.h">
+				RelativePath=".\DOM2EventTarget.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Script Interpreting"
-			Filter="">
+			>
 			<File
-				RelativePath=".\CApplicationWrapper.cpp">
+				RelativePath=".\CApplicationWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CApplicationWrapper.h">
+				RelativePath=".\CApplicationWrapper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CButtonWrapper.cpp">
+				RelativePath=".\CButtonWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CButtonWrapper.h">
+				RelativePath=".\CButtonWrapper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CImageProcessorWrapper.cpp">
+				RelativePath=".\CImageProcessorWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CImageProcessorWrapper.h">
+				RelativePath=".\CImageProcessorWrapper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CMainWindowWrapper.cpp">
+				RelativePath=".\CMainWindowWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CMainWindowWrapper.h">
+				RelativePath=".\CMainWindowWrapper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CMyJScriptHost.cpp">
+				RelativePath=".\CMyJScriptHost.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CMyJScriptHost.h">
+				RelativePath=".\CMyJScriptHost.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DispatchHelper.cpp">
+				RelativePath=".\DispatchHelper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\DispatchHelper.h">
+				RelativePath=".\DispatchHelper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchBaseImpl.h">
+				RelativePath=".\IDispatchBaseImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchExImpl2.h">
+				RelativePath=".\IDispatchExImpl2.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchImpl.h">
+				RelativePath=".\IDispatchImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ImageViewer.idl">
+				RelativePath=".\ImageViewer.idl"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCMIDLTool"
 						TypeLibraryName="$(SolutionDir)/$(InputName).tlb"
 						HeaderFileName="$(InputDir)/$(InputName)_h.h"
-						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"/>
+						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release|Win32"
+					>
 					<Tool
 						Name="VCMIDLTool"
 						TypeLibraryName="$(SolutionDir)/$(InputName).tlb"
 						HeaderFileName="$(InputDir)/$(InputName)_h.h"
-						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"/>
+						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"
+					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\JSEventHandling.cpp">
+				RelativePath=".\JSEventHandling.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\JSEventHandling.h">
+				RelativePath=".\JSEventHandling.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ViewerEvent.cpp">
+				RelativePath=".\ViewerEvent.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\ViewerEvent.h">
+				RelativePath=".\ViewerEvent.h"
+				>
 			</File>
 		</Filter>
 		<File
-			RelativePath=".\res\ImageViewer.manifest">
+			RelativePath=".\res\ImageViewer.manifest"
+			>
 		</File>
 		<File
-			RelativePath=".\ReadMe.txt">
+			RelativePath=".\ReadMe.txt"
+			>
 		</File>
 	</Files>
 	<Globals>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="ImageViewer.rc"/>
+			Value="ImageViewer.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
