--- a/JSInterpreting/JSInterpreting.vcproj
+++ b/JSInterpreting/JSInterpreting.vcproj
@@ -1,114 +1,177 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="9.00"
 	Name="JSInterpreting"
 	ProjectGUID="{031E930E-9797-4E75-8F41-DCBA07647F27}"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="2"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".\ScriptDebugger"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_MIDL_USE_GUIDDEF_"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="3"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies=".\ScriptDebugger\ad1.lib"
 				OutputFile=".\JSInterpreting_d.exe"
 				LinkIncremental="2"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/JSInterpreting.pdb"
 				SubSystem="1"
-				TargetMachine="1"/>
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="2"
-			CharacterSet="2">
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories=".\ScriptDebugger"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_MIDL_USE_GUIDDEF_"
 				RuntimeLibrary="2"
-				UsePrecompiledHeader="3"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies=".\ScriptDebugger\ad1.lib"
 				OutputFile=".\JSInterpreting.exe"
 				LinkIncremental="1"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				TargetMachine="1"/>
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -117,188 +180,246 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath=".\CHQThread.cpp">
+				RelativePath=".\CHQThread.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\JSInterpreting.cpp">
+				RelativePath=".\JSInterpreting.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx.cpp">
+				RelativePath=".\stdafx.cpp"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release|Win32"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+						UsePrecompiledHeader="1"
+					/>
 				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath=".\CHQThread.h">
+				RelativePath=".\CHQThread.h"
+				>
 			</File>
 			<File
-				RelativePath=".\global.h">
+				RelativePath=".\global.h"
+				>
 			</File>
 			<File
-				RelativePath=".\stdafx.h">
+				RelativePath=".\stdafx.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Script Interpreting"
-			Filter="">
+			>
 			<File
-				RelativePath=".\CApplication.cpp">
+				RelativePath=".\CApplication.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CApplication.h">
+				RelativePath=".\CApplication.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CCallbackManager.cpp">
+				RelativePath=".\CCallbackManager.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CCallbackManager.h">
+				RelativePath=".\CCallbackManager.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CCar.cpp">
+				RelativePath=".\CCar.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CCar.h">
+				RelativePath=".\CCar.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CDebugger.cpp">
+				RelativePath=".\CDebugger.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CDebugger.h">
+				RelativePath=".\CDebugger.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CFileCopyThread.h">
+				RelativePath=".\CFileCopyThread.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CHQException.h">
+				RelativePath=".\CHQException.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CJScriptHost.cpp">
+				RelativePath=".\CJScriptHost.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CJScriptHost.h">
+				RelativePath=".\CJScriptHost.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CMediaPlayer.cpp">
+				RelativePath=".\CMediaPlayer.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CMediaPlayer.h">
+				RelativePath=".\CMediaPlayer.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CScriptEngineWrapper.cpp">
+				RelativePath=".\CScriptEngineWrapper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CScriptEngineWrapper.h">
+				RelativePath=".\CScriptEngineWrapper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CTimer.cpp">
+				RelativePath=".\CTimer.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CTimer.h">
+				RelativePath=".\CTimer.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CTimerManager.cpp">
+				RelativePath=".\CTimerManager.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\CTimerManager.h">
+				RelativePath=".\CTimerManager.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DispatchHelper.cpp">
+				RelativePath=".\DispatchHelper.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\DispatchHelper.h">
+				RelativePath=".\DispatchHelper.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchArrayImpl.h">
+				RelativePath=".\IDispatchArrayImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchBaseImpl.h">
+				RelativePath=".\IDispatchBaseImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchExImpl.h">
+				RelativePath=".\IDispatchExImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchImpl.h">
+				RelativePath=".\IDispatchImpl.h"
+				>
 			</File>
 			<File
-				RelativePath=".\IDispatchImpl2.h">
+				RelativePath=".\IDispatchImpl2.h"
+				>
 			</File>
 			<File
-				RelativePath=".\js_demo.idl">
+				RelativePath=".\js_demo.idl"
+				>
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug|Win32"
+					>
 					<Tool
 						Name="VCMIDLTool"
 						TypeLibraryName="$(SolutionDir)/$(InputName).tlb"
 						HeaderFileName="$(InputDir)/$(InputName)_h.h"
-						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"/>
+						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release|Win32"
+					>
 					<Tool
 						Name="VCMIDLTool"
 						TypeLibraryName="$(SolutionDir)/$(InputName).tlb"
 						HeaderFileName="$(InputDir)/$(InputName)_h.h"
-						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"/>
+						InterfaceIdentifierFileName="$(InputDir)/$(InputName)_i.c"
+					/>
 				</FileConfiguration>
 			</File>
 		</Filter>
 		<File
-			RelativePath=".\TestingCase01.js">
+			RelativePath=".\TestingCase01.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase02.js">
+			RelativePath=".\TestingCase02.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase03.js">
+			RelativePath=".\TestingCase03.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase04.js">
+			RelativePath=".\TestingCase04.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase05.js">
+			RelativePath=".\TestingCase05.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase06.js">
+			RelativePath=".\TestingCase06.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase07.js">
+			RelativePath=".\TestingCase07.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase08.js">
+			RelativePath=".\TestingCase08.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase09.js">
+			RelativePath=".\TestingCase09.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase10.js">
+			RelativePath=".\TestingCase10.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase11.js">
+			RelativePath=".\TestingCase11.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase12.js">
+			RelativePath=".\TestingCase12.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase13.js">
+			RelativePath=".\TestingCase13.js"
+			>
 		</File>
 		<File
-			RelativePath=".\TestingCase14.js">
+			RelativePath=".\TestingCase14.js"
+			>
 		</File>
 	</Files>
 	<Globals>
